--- a/views/res_config_settings_view.xml
+++ b/views/res_config_settings_view.xml
@@ -3,9 +3,9 @@
     <record id="res_config_settings_view_form_credit_alert" model="ir.ui.view">
         <field name="name">res.config.settings.form.credit.alert</field>
         <field name="model">res.config.settings</field>
-        <field name="inherit_id" ref="base_setup.res_config_settings_view_form"/>
+        <field name="inherit_id" ref="sale.res_config_settings_view_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//div[@id='business_documents']" position="after">
+            <xpath expr="//div[@id='pricing_setting_container']" position="after">
                 <div id="credit_management_settings">
                     <h2>Credit management</h2>
                     <div class="row mt16 o_settings_container">
