--- a/report/sale_voucher_template.xml
+++ b/report/sale_voucher_template.xml
@@ -8,15 +8,15 @@
 
                         <h2>sale voucher ID:<span t-field="doc.name"/></h2>
 
-                        <div >
-                            <div class="col-6">
+                        <div class="row mt32 mb32" id="informations" >
+                            <div  class="col-auto col-3 mw-100 mb-2">
                                 <strong>Partner name:</strong> <span t-field="doc.partner_id.name"/>
                             </div>
 
-                            <div class="col-6">
+                            <div  class="col-auto col-3 mw-100 mb-2">
                                 <strong>Reference sales order:</strong> <span t-field="doc.sale_order_id.name"/>
                             </div>
-                            <div class="col-6">
+                            <div  class="col-auto col-3 mw-100 mb-2">
                                 <strong>Date: </strong> <span t-field="doc.date" t-options='{"widget": "date"}'/>
                             </div>
                         </div>
